# tauri-demo

./: .gitignore  Cargo.toml  tauri.conf.json
tauri-backend/: Cargo.toml  tauri.conf.json
tauri-backend/src/: lib.rs
tauri-frontend/: package-lock.json  package.json
tauri-frontend/src/: App.vue
