[package]
name = "app"
version = "0.0.1"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["rlib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.2" }

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.1.1" }
tauri-plugin-log = "2.0.2"
