[package]
name = "app"
version = "0.0.1"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["rlib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = "2"
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
